[project]
name = "jigglypuff-timer"
version = "0.1.0"
description = "A disciplined Jigglypuff sleep timer using Python"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "gif-pygame>=1.2.0",
    "pygame>=2.6.1",
]

[tool.ruff]
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.15.20",
]
